<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_ckplayer"
        android:title="@string/action_ckplayer"/>
    <item
        android:id="@+id/photo_notes"
        android:title="@string/photo_notes"/>
    <item
        android:id="@+id/xuecheng_notes"
        android:title="@string/xuecheng_notes"/>
    <item
        android:id="@+id/dot_info_intent"
        android:title="@string/dot_info_intent"/>
    <item
        android:id="@+id/action_clear"
        android:title="@string/action_clear"/>
    <item
        android:id="@+id/action_setup"
        android:title="@string/action_setup"/>
    <item
        android:id="@+id/a0_page0"
        android:title="@string/page_a0"/>
    <item
        android:id="@+id/line_chart"
        android:title="画图"/>

</menu>
