<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ScanActivity">

    <cn.bingoogolapple.qrcode.zxing.ZXingView
        android:id="@+id/zxing_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <Button
        android:id="@+id/Button_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dp"
        android:background="#00000000"
        android:text="@string/QR_scan"
        android:textSize="20sp" />


    <Button
        android:id="@+id/Button_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/take_photo"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="100dp"
        android:layout_alignStart="@id/Button_scan"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/Button_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:textSize="20sp"

        android:background="#00000000"
        android:layout_alignBottom="@+id/Button_photo"
        android:layout_marginEnd="100dp"
        android:layout_alignEnd="@id/Button_scan"
        />

</RelativeLayout>
