<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ScanActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.camera.view.PreviewView
            android:id="@+id/previewView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <ImageView
            android:id="@+id/ivResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <com.king.view.viewfinderview.ViewfinderView
            android:id="@+id/viewfinderView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:vvViewfinderStyle="popular"
            app:vvLaserStyle="image"
            app:vvLaserDrawableRatio="0.8"
            app:vvLaserDrawable="@drawable/ic_laser_line"/>

    </FrameLayout>

    <Button
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:onClick="onClick"
        android:background="@drawable/selector_back_button">

    </Button>

    <Button
        android:id="@+id/Button_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="50dp"
        android:background="#00000000"
        android:onClick="onClick"
        android:text="@string/QR_scan"
        android:textColor="@color/white"
        android:textSize="20sp" />


    <Button
        android:id="@+id/Button_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:onClick="onClick"
        android:text="@string/take_photo"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="100dp"
        android:layout_alignStart="@id/Button_scan"
        android:textSize="20sp"
        android:textColor="@color/gray"
        />

    <Button
        android:id="@+id/Button_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/select"
        android:textSize="20sp"
        android:textColor="@color/gray"
        android:background="#00000000"
        android:layout_alignBottom="@+id/Button_photo"
        android:layout_marginEnd="100dp"
        android:layout_alignEnd="@id/Button_scan"
        />
</RelativeLayout>
